--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -300,9 +300,10 @@ body {
 .welcome-card {
     text-align: center;
     background: linear-gradient(135deg, #6366f1 0%, #ec4899 100%);
-    padding: 3vw 2.5vw;
+    padding: 1vw 1vw;
     border-radius: 20px;
-    width: 100%;
+    width: 80vw;
+    height: 80vh;
     max-width: 500px;
     box-shadow: 0 30px 60px rgba(99, 102, 241, 0.4), inset 0 1px 0 rgba(255, 255, 255, 0.1);
     animation: slideInUp 0.7s cubic-bezier(0.34, 1.56, 0.64, 1);
@@ -347,7 +348,7 @@ body {
     gap: 1.2vw;
     justify-content: center;
     flex-wrap: wrap;
-    margin-bottom: 2vw;
+    margin-bottom: 0.5vw;
     position: relative;
     z-index: 1;
     width: 100%;
@@ -478,6 +479,8 @@ body {
     backdrop-filter: blur(10px);
     z-index: 1;
     position: relative;
+    display: flex;
+    flex-direction: row;
 }
 
 .room-info.hidden {
@@ -497,12 +500,12 @@ body {
     gap: 2vw;
     max-width: 100%;
     width: 100%;
-    padding: 0 1vw;
+    padding: 0 2vw;
 }
 
 .feature-card {
     background: linear-gradient(135deg, var(--surface), #1e293b);
-    padding: 2.5vw;
+    padding: 1.2vw;
     border-radius: 1.2vw;
     border: 1px solid var(--border-color);
     text-align: center;
@@ -571,6 +574,20 @@ body {
     font-size: clamp(12px, 1.1vw, 14px);
     position: relative;
     z-index: 1;
+}
+
+#copyBtn{
+    margin: 0.2vw;
+}
+#startWatchingBtn{
+    margin: 0.2vw;
+}
+#displayRoomId{
+    /* height: 30vh; */
+    font-size: 20px;
+    margin: 0.2vw;
+    padding-top: 2vh;
+    text-align: center;
 }
 
 /* Watch Section */
